--- a/TDD/CoinChangerApplication/CoinChangerApplication.csproj
+++ b/TDD/CoinChangerApplication/CoinChangerApplication.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{74FB91A8-5432-433E-B70C-638584FC7A6A}</ProjectGuid>
+    <ProjectGuid>{162AEEB5-65A9-43A4-9A47-F7B41C0662B2}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ValidatorEngine</RootNamespace>
-    <AssemblyName>ValidatorEngine</AssemblyName>
+    <RootNamespace>CoinChangerApplication</RootNamespace>
+    <AssemblyName>CoinChangerApplication</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,10 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Exceptions.cs" />
+    <Compile Include="CoinChanger.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Validator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
