--- a/TDD/CoinChangerApplication/CoinChangerApplication.csproj
+++ b/TDD/CoinChangerApplication/CoinChangerApplication.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CoinChanger.cs" />
+    <Compile Include="Exceptions.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
